boxes with side borders

--- a/index.html
+++ b/index.html
@@ -23,15 +23,12 @@
 
         <section class="wrapper">
             <div class="div-1">
-                <h3>Diabetes</h3>
                 <p>This is the intro/link to best practices for dosing diabetes medications</p>
             </div>
             <div class="div-2">
-              <h3>Insurance</h3>
-              <p>This is a section/link related to malpractice insurance...</p>
+              <p>This is a section/link related to malpractice insurance...<br> more text text text</p>
             </div>
             <div class="div-3">
-              <h3>How can we help?</h3>
               <p>Let us know what other kinds of content you would like to see on The Pharmacy Spot</p>
             </div>
         </section>
