completed second exercise

--- a/index.html
+++ b/index.html
@@ -20,16 +20,23 @@
         <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-
         <section class="wrapper">
-            <div class="div-1">
-                <p>This is the intro/link to best practices for dosing diabetes medications</p>
-            </div>
-            <div class="div-2">
-              <p>This is a section/link related to malpractice insurance...<br> more text text text</p>
-            </div>
-            <div class="div-3">
-              <p>Let us know what other kinds of content you would like to see on The Pharmacy Spot</p>
+            <header>
+                <h1> Hi. I'm Michelle</h1>
+            </header>
+            <main>
+                <h2>I am a <em>Responsive Developer</em> who thrives on visual storytelling... This is the part that goes into a little too much detail about my personal hobbies and interests.</h2>
+            </main>
+            <div id="div-container">
+                <div class="div-1">
+                    <p>This is the intro/link to best practices for dosing diabetes medications</p>
+                </div>
+                <div class="div-2">
+                    <p>This is a section/link related to malpractice insurance...<br> more text text text</p>
+                </div>
+                <div class="div-3">
+                    <p>Let us know what other kinds of content you would like to see on The Pharmacy Spot</p>
+                </div>
             </div>
         </section>
 
